--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -5,4 +5,12 @@
 <% @names.each do |actor| %>
   <p><%= actor.name %></p>
 <% end %>
+
+<%= form_with url: "/movies/#{@movie.id}", method: :post, local: true do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+
+  <%= f.submit 'Submit'%>
+<% end %>
+
 <h6>Average Age: <%= @average_age %></h6>
